syntax = "proto3";
option csharp_namespace = "GrpcService1";

package Tasks;

service TasksService {
  rpc RecordTask(RecordTaskRequest) returns (RecordTaskResponse);
}

message RecordTaskRequest {
  Task task = 1;
}

message RecordTaskResponse {
  Status status = 1;
}

message Task {
  int32 Id = 1;
  int32 ProjectId = 2;
  string Title = 3;
  string WorkLocation = 4;
  int32 Time = 5;
  int32 EndTime = 6;
  string Description = 7;
  string Status = 8;
}

message Status {

}